# Ataxx_Frontend

./: .gitignore  CMakeLists.txt  README.MD
src/: About.qml  BlurRectangle.qml  Game.qml  GameData.cpp  GameData.h  MainMenu.qml  Switch.qml  TextButton.qml  Tile.qml  TileData.cpp  TileData.h  main.cpp  main.qml  qml.qrc
